--- a/index.html
+++ b/index.html
@@ -228,6 +228,40 @@
                         </nav>
                         <!-- mobile menu end -->
                     </div>
+                    <div class="mobile-header-info-wrap mobile-header-padding-border-3">
+                        <div class="single-mobile-header-info">
+                            <a href="order-tracking.html"><i class="lastudioicon-pin-3-2"></i> Отследить заказ </a>
+                        </div>
+                        <div class="single-mobile-header-info">
+                            <a class="mobile-language-active" href="#">Язык <span><i class="icon-arrow-down"></i></span></a>
+                            <div class="lang-curr-dropdown lang-dropdown-active">
+                                <ul>
+                                    <li><a href="#">Русский</a></li>
+                                    <li><a href="#">English</a></li>
+                                    <li><a href="#">German</a></li>
+                                    <li><a href="#">Spanish</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="single-mobile-header-info">
+                            <a class="mobile-currency-active" href="#">Валюта <span><i class="icon-arrow-down"></i></span></a>
+                            <div class="lang-curr-dropdown curr-dropdown-active">
+                                <ul>
+                                    <li><a href="#">USD</a></li>
+                                    <li><a href="#">EUR</a></li>
+                                    <li><a href="#">RUR</a></li>
+                                    <li><a href="#">BDT</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mobile-contact-info mobile-header-padding-border-4">
+                        <ul>
+                            <li><i class="icon-phone "></i> (+612) 2531 5600</li>
+                            <li><i class="icon-envelope-open "></i> sales@metko.club</li>
+                            <li><i class="icon-home"></i> Россия, г.Киров, ул.Труда 71</li>
+                        </ul>
+                    </div>
                     <div class="mobile-social-icon">
                         <a class="instagram" href="#"><i class="icon-social-instagram"></i></a>
                         <a class="facebook" href="#"><i class="icon-social-vkontakte"></i></a>
