--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                 <a href="product-details.html"><img src="MetkoPhotosTemplate/Dior-Essentials-Cover-Produits2_1440_1200.jpg" alt=""></a>
                             </div>
                             <div class="banner-content-11">
-                                <h2><span>Деловой стиль</span></h2>
+                                <h2><span>Деловой <br>стиль</span></h2>
                             </div>
                         </div>
                     </div>
@@ -326,7 +326,7 @@
                                 <a href="product-details.html"><img src="MetkoPhotosTemplate/Dior-Essentials-Cover-Produits2_1440_1200.jpg" alt=""></a>
                             </div>
                             <div class="banner-content-11">
-                                <h2><span>Уличный стиль</span></h2>
+                                <h2><span>Уличный <br>стиль</span></h2>
                             </div>
                         </div>
                     </div>
