--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,7 @@
                 </div>
             </div>
         </div>
-        <footer class="footer-area pt-85 bg-white pb-90">
+        <footer class="footer-area pt-85 bg-poly pb-90">
             <div class="container">
                 <div class="footer-top text-center">
                     <div class="footer-menu footer-menu-hover-border">
