--- a/shop.html
+++ b/shop.html
@@ -859,54 +859,63 @@
                 </div>
             </div>
         </div>
-        <footer class="footer-area bg-gray pb-30">
+        <footer class="footer-area pt-85 bg-white pb-90">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6">
-                        <div class="contact-info-wrap">
-                            <div class="footer-logo">
-                                <a href="#"><img src="assets/images/logo/logo.png" alt="logo"></a>
-                            </div>
-                            <div class="single-contact-info">
-                                <span>Our Location</span>
-                                <p>869 General Village Apt. 645, Moorebury, USA</p>
-                            </div>
-                            <div class="single-contact-info">
-                                <span>24/7 hotline:</span>
-                                <p>(+99) 052 128 2399</p>
+                <div class="footer-top text-center">
+                    <div class="footer-menu footer-menu-hover-border">
+                        <nav>
+                            <ul>
+                                <li><a href="#">Главная</a></li>
+                                <li><a href="#">Доставка</a></li>
+                                <li><a href="#">Подарок от нас</a></li>
+                                <li><a href="#">Гарантия и сервис </a></li>
+                                <li><a href="#">Контакты</a></li>
+                                <li><a href="#">Блог</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="footer-middle footer-middle-mrg">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-3">
+                            <div class="social-style-3-wrap xs-center">
+                                <span>Мы в соцсетях</span>
+                                <div class="social-style-1">
+                                    <a href="#"><i class="icon-social-instagram"></i></a>
+                                    <a href="#"><i class="icon-social-vkontakte"></i></a>
+                                    <a href="#"><i class="icon-social-pinterest"></i></a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6">
-                        <div class="footer-right-wrap">
-                            <div class="footer-menu">
-                                <nav>
-                                    <ul>
-                                        <li><a href="index.html">home</a></li>
-                                        <li><a href="shop.html">Shop</a></li>
-                                        <li><a href="shop.html">Product </a></li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                        <li><a href="blog.html">Blog.</a></li>
-                                    </ul>
-                                </nav>
+                        <div class="col-lg-6 col-md-6">
+                            <div class="contact-info-wrap-2 text-center">
+                                <div class="footer-logo footer-logo-mrg">
+                                    <a href="#"><img src="assets/images/logo/logo-footer.svg" alt="logo"></a>
+                                </div>
+                                <p>Россия, г.Киров, ул.Труда 71</p>
+                                <p>+7 (999) 999 99 99</p>
+                                <p>sales@metko.club</p>
                             </div>
-                            <div class="social-style-2 social-style-2-mrg">
-                                <a href="#"><i class="social_twitter"></i></a>
-                                <a href="#"><i class="social_facebook"></i></a>
-                                <a href="#"><i class="social_googleplus"></i></a>
-                                <a href="#"><i class="social_instagram"></i></a>
-                                <a href="#"><i class="social_youtube"></i></a>
-                            </div>
-                            <div class="copyright">
-                                <p>Copyright © 2020 HasThemes | <a href="https://hasthemes.com/">Built with <span>Norda</span> by HasThemes</a>.</p>
+                        </div>
+                        <div class="col-lg-3 col-md-3">
+                            <div class="language-style-2-wrap language-style-2-right">
+                                <span>Язык</span>
+                                <div class="language-style-2">
+                                    <a href="#">ENG</a>
+                                    <a href="#">FRA</a>
+                                    <a href="#">GER</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="footer-bottom copyright text-center">
+                    <p>Metko.Club © 2021 Все права защищены</p>
+                </div>
             </div>
         </footer>
         <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog">
+        <div class="modal fade" id="exampleModal" tabindex="1000" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
