--- a/index.html
+++ b/index.html
@@ -389,7 +389,6 @@
         
         </div>-->
 
-
         <div class="product-area bg-white pt-115">
             <div class="container">
                 <div class="product-pb-80">
@@ -1134,6 +1133,24 @@
                 </div>
             </div>
         </div>
+
+        <div class="deal-area pt-150 pb-130 bg-img" style="background-image:url(assets/images/bg/bg-1.jpg);">
+            <div class="container">
+                <div class="deal-content-1">
+                    <span>предложение дня</span>
+                    <h2><span>50% скидка</span> <br>Какое-то <br>предложение</h2>
+                    <p>Описание</p>
+                    <div class="timer-wrap">
+                        <h4>Expires in:</h4>
+                        <div class="timer-style-1" id="timer-1-active"></div>
+                    </div>
+                    <div class="deal-btn">
+                        <a href="product-details.html">За покупками</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!--<div class="product-area bg-white pt-115 pb-110">
             <div class="container">
                 <div class="section-title-2 text-center mb-45">
@@ -1237,10 +1254,10 @@
                 </div>
             </div>
         </div>-->
-        
+
         <div class="blog-area bg-white">
             <div class="container">
-                <div class="section-title-2 text-center mb-45">
+                <div class="section-title-2 text-center pbb-45">
                     <h2><span>Наш</span> блог</h2>
                     <p>Здесь вы можете найти много советов по уходу и по стилю</p>
                 </div>
