--- a/checkout.html
+++ b/checkout.html
@@ -446,7 +446,7 @@
                 </div>
             </div>
         </div>
-        <div class="subscribe-area bg-gray pt-115 pb-115">
+        <div class="subscribe-area bg-white pt-115 pb-115">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 col-md-5">
@@ -473,7 +473,7 @@
                 </div>
             </div>
         </div>
-        <footer class="footer-area pt-85 bg-white pb-90">
+        <footer class="footer-area pt-85 bg-poly pb-90">
             <div class="container">
                 <div class="footer-top text-center">
                     <div class="footer-menu footer-menu-hover-border">
