--- a/blog-details.html
+++ b/blog-details.html
@@ -749,11 +749,10 @@
                                             </div>
                                         </div>
                                         <div class="product-review-order">
-                                            <span>62 Reviews</span>
-                                            <span>242 orders</span>
+                                            <span>62 Отзывов</span>
+                                            <span>242 заказов</span>
                                         </div>
                                     </div>
-                                    <p>Seamlessly predominate enterprise metrics without performance based process improvements.</p>
                                     <div class="pro-details-price">
                                         <span class="new-price">$75.72</span>
                                         <span class="old-price">$95.72</span>
@@ -784,15 +783,15 @@
                                         </div>
                                     </div>
                                     <div class="pro-details-quality">
-                                        <span>Quantity:</span>
+                                        <span>Кол-во:</span>
                                         <div class="cart-plus-minus">
                                             <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1">
                                         </div>
                                     </div>
                                     <div class="product-details-meta">
                                         <ul>
-                                            <li><span>Categories:</span> <a href="#">Woman,</a> <a href="#">Dress,</a> <a href="#">T-Shirt</a></li>
-                                            <li><span>Tag: </span> <a href="#">Fashion,</a> <a href="#">Mentone</a> , <a href="#">Texas</a></li>
+                                            <li><span>Категории:</span> <a href="#">Woman,</a> <a href="#">Dress,</a> <a href="#">T-Shirt</a></li>
+                                            <li><span>Теги: </span> <a href="#">Fashion,</a> <a href="#">Mentone</a> , <a href="#">Texas</a></li>
                                         </ul>
                                     </div>
                                     <div class="pro-details-action-wrap">
@@ -804,10 +803,9 @@
                                             <a title="Add to Compare" href="#"><i class="icon-refresh"></i></a>
                                             <a class="social" title="Social" href="#"><i class="icon-share"></i></a>
                                             <div class="product-dec-social">
-                                                <a class="facebook" title="Facebook" href="#"><i class="icon-social-facebook"></i></a>
-                                                <a class="twitter" title="Twitter" href="#"><i class="icon-social-twitter"></i></a>
-                                                <a class="instagram" title="Instagram" href="#"><i class="icon-social-instagram"></i></a>
-                                                <a class="pinterest" title="Pinterest" href="#"><i class="icon-social-pinterest"></i></a>
+                                                <a class="instagram" title="instagram" href="#"><i class="icon-social-instagram"></i></a>
+                                                <a class="facebook" title="vkontakte" href="#"><i class="icon-social-vkontakte"></i></a>
+                                                <a class="pinterest" title="pinterest" href="#"><i class="icon-social-pinterest"></i></a>
                                             </div>
                                         </div>
                                     </div>
