--- a/index.html
+++ b/index.html
@@ -1447,11 +1447,10 @@
                                             </div>
                                         </div>
                                         <div class="product-review-order">
-                                            <span>62 Reviews</span>
-                                            <span>242 orders</span>
+                                            <span>62 Отзывов</span>
+                                            <span>242 заказов</span>
                                         </div>
                                     </div>
-                                    <p>Seamlessly predominate enterprise metrics without performance based process improvements.</p>
                                     <div class="pro-details-price">
                                         <span class="new-price">$75.72</span>
                                         <span class="old-price">$95.72</span>
@@ -1482,15 +1481,15 @@
                                         </div>
                                     </div>
                                     <div class="pro-details-quality">
-                                        <span>Quantity:</span>
+                                        <span>Кол-во:</span>
                                         <div class="cart-plus-minus">
                                             <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1">
                                         </div>
                                     </div>
                                     <div class="product-details-meta">
                                         <ul>
-                                            <li><span>Categories:</span> <a href="#">Woman,</a> <a href="#">Dress,</a> <a href="#">T-Shirt</a></li>
-                                            <li><span>Tag: </span> <a href="#">Fashion,</a> <a href="#">Mentone</a> , <a href="#">Texas</a></li>
+                                            <li><span>Категории:</span> <a href="#">Woman,</a> <a href="#">Dress,</a> <a href="#">T-Shirt</a></li>
+                                            <li><span>Теги: </span> <a href="#">Fashion,</a> <a href="#">Mentone</a> , <a href="#">Texas</a></li>
                                         </ul>
                                     </div>
                                     <div class="pro-details-action-wrap">
