--- a/login-register.html
+++ b/login-register.html
@@ -301,12 +301,12 @@
                 </div>
             </div>
         </div>
-        <div class="subscribe-area bg-gray pt-115 pb-115">
+        <div class="subscribe-area pt-115 bg-white pb-120 mb-20">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 col-md-5">
-                        <div class="section-title">
-                            <h2>Подпишись</h2>
+                        <div class="section-title-2">
+                            <h2><span>Подпишись</span></h2>
                             <p>И получи подарок - 10% на все товары нашего магазина</p>
                         </div>
                     </div>
@@ -328,7 +328,7 @@
                 </div>
             </div>
         </div>
-        <footer class="footer-area pt-85 bg-white pb-90">
+        <footer class="footer-area pt-85 bg-poly pb-90">
             <div class="container">
                 <div class="footer-top text-center">
                     <div class="footer-menu footer-menu-hover-border">
