--- a/product-details.html
+++ b/product-details.html
@@ -786,25 +786,25 @@
                 </div>
             </div>
         </div>
-        <div class="subscribe-area bg-gray pt-115 pb-115">
+        <div class="subscribe-area pt-115 bg-white pb-120 mb-20">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 col-md-5">
-                        <div class="section-title">
-                            <h2>keep connected</h2>
-                            <p>Get updates by subscribe our weekly newsletter</p>
+                        <div class="section-title-2">
+                            <h2><span>Подпишись</span></h2>
+                            <p>И получи подарок - 10% на все товары нашего магазина</p>
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-7">
                         <div id="mc_embed_signup" class="subscribe-form">
                             <form id="mc-embedded-subscribe-form" class="validate subscribe-form-style" novalidate="" target="_blank" name="mc-embedded-subscribe-form" method="post" action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef">
                                 <div id="mc_embed_signup_scroll" class="mc-form">
-                                    <input class="email" type="email" required="" placeholder="Enter your email address" name="EMAIL" value="">
+                                    <input class="email" type="email" required="" placeholder="Введите ваш e-mail" name="EMAIL" value="">
                                     <div class="mc-news" aria-hidden="true">
                                         <input type="text" value="" tabindex="-1" name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef">
                                     </div>
                                     <div class="clear">
-                                        <input id="mc-embedded-subscribe" class="button" type="submit" name="subscribe" value="Subscribe">
+                                        <input id="mc-embedded-subscribe" class="button" type="submit" name="subscribe" value="Подписаться">
                                     </div>
                                 </div>
                             </form>
@@ -813,49 +813,58 @@
                 </div>
             </div>
         </div>
-        <footer class="footer-area bg-gray pb-30">
+        <footer class="footer-area pt-85 bg-poly pb-90">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6">
-                        <div class="contact-info-wrap">
-                            <div class="footer-logo">
-                                <a href="#"><img src="assets/images/logo/logo.png" alt="logo"></a>
+                <div class="footer-top text-center">
+                    <div class="footer-menu footer-menu-hover-border">
+                        <nav>
+                            <ul>
+                                <li><a href="#">Главная</a></li>
+                                <li><a href="#">Доставка</a></li>
+                                <li><a href="#">Подарок от нас</a></li>
+                                <li><a href="#">Гарантия и сервис </a></li>
+                                <li><a href="#">Контакты</a></li>
+                                <li><a href="#">Блог</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="footer-middle footer-middle-mrg">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-3">
+                            <div class="social-style-3-wrap xs-center">
+                                <span>Мы в соцсетях</span>
+                                <div class="social-style-1">
+                                    <a href="#"><i class="icon-social-instagram"></i></a>
+                                    <a href="#"><i class="icon-social-vkontakte"></i></a>
+                                    <a href="#"><i class="icon-social-pinterest"></i></a>
+                                </div>
                             </div>
-                            <div class="single-contact-info">
-                                <span>Our Location</span>
-                                <p>869 General Village Apt. 645, Moorebury, USA</p>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            <div class="contact-info-wrap-2 text-center">
+                                <div class="footer-logo footer-logo-mrg">
+                                    <a href="#"><img src="assets/images/logo/logo-footer.svg" alt="logo"></a>
+                                </div>
+                                <p>Россия, г.Киров, ул.Труда 71</p>
+                                <p>+7 (999) 999 99 99</p>
+                                <p>sales@metko.club</p>
                             </div>
-                            <div class="single-contact-info">
-                                <span>24/7 hotline:</span>
-                                <p>(+99) 052 128 2399</p>
+                        </div>
+                        <div class="col-lg-3 col-md-3">
+                            <div class="language-style-2-wrap language-style-2-right">
+                                <span>Язык</span>
+                                <div class="language-style-2">
+                                    <a href="#">ENG</a>
+                                    <a href="#">FRA</a>
+                                    <a href="#">GER</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6">
-                        <div class="footer-right-wrap">
-                            <div class="footer-menu">
-                                <nav>
-                                    <ul>
-                                        <li><a href="index.html">home</a></li>
-                                        <li><a href="shop.html">Shop</a></li>
-                                        <li><a href="shop.html">Product </a></li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                        <li><a href="blog.html">Blog.</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                            <div class="social-style-2 social-style-2-mrg">
-                                <a href="#"><i class="social_twitter"></i></a>
-                                <a href="#"><i class="social_facebook"></i></a>
-                                <a href="#"><i class="social_googleplus"></i></a>
-                                <a href="#"><i class="social_instagram"></i></a>
-                                <a href="#"><i class="social_youtube"></i></a>
-                            </div>
-                            <div class="copyright">
-                                <p>Copyright © 2020 HasThemes | <a href="https://hasthemes.com/">Built with <span>Norda</span> by HasThemes</a>.</p>
-                            </div>
-                        </div>
-                    </div>
+                </div>
+                <div class="footer-bottom copyright text-center">
+                    <p>Metko.Club © 2021 Все права защищены</p>
                 </div>
             </div>
         </footer>
@@ -909,11 +918,10 @@
                                             </div>
                                         </div>
                                         <div class="product-review-order">
-                                            <span>62 Reviews</span>
-                                            <span>242 orders</span>
+                                            <span>62 Отзывов</span>
+                                            <span>242 заказов</span>
                                         </div>
                                     </div>
-                                    <p>Seamlessly predominate enterprise metrics without performance based process improvements.</p>
                                     <div class="pro-details-price">
                                         <span class="new-price">$75.72</span>
                                         <span class="old-price">$95.72</span>
@@ -944,15 +952,15 @@
                                         </div>
                                     </div>
                                     <div class="pro-details-quality">
-                                        <span>Quantity:</span>
+                                        <span>Кол-во:</span>
                                         <div class="cart-plus-minus">
                                             <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1">
                                         </div>
                                     </div>
                                     <div class="product-details-meta">
                                         <ul>
-                                            <li><span>Categories:</span> <a href="#">Woman,</a> <a href="#">Dress,</a> <a href="#">T-Shirt</a></li>
-                                            <li><span>Tag: </span> <a href="#">Fashion,</a> <a href="#">Mentone</a> , <a href="#">Texas</a></li>
+                                            <li><span>Категории:</span> <a href="#">Woman,</a> <a href="#">Dress,</a> <a href="#">T-Shirt</a></li>
+                                            <li><span>Теги: </span> <a href="#">Fashion,</a> <a href="#">Mentone</a> , <a href="#">Texas</a></li>
                                         </ul>
                                     </div>
                                     <div class="pro-details-action-wrap">
@@ -964,10 +972,9 @@
                                             <a title="Add to Compare" href="#"><i class="icon-refresh"></i></a>
                                             <a class="social" title="Social" href="#"><i class="icon-share"></i></a>
                                             <div class="product-dec-social">
-                                                <a class="facebook" title="Facebook" href="#"><i class="icon-social-facebook"></i></a>
-                                                <a class="twitter" title="Twitter" href="#"><i class="icon-social-twitter"></i></a>
-                                                <a class="instagram" title="Instagram" href="#"><i class="icon-social-instagram"></i></a>
-                                                <a class="pinterest" title="Pinterest" href="#"><i class="icon-social-pinterest"></i></a>
+                                                <a class="instagram" title="instagram" href="#"><i class="icon-social-instagram"></i></a>
+                                                <a class="facebook" title="vkontakte" href="#"><i class="icon-social-vkontakte"></i></a>
+                                                <a class="pinterest" title="pinterest" href="#"><i class="icon-social-pinterest"></i></a>
                                             </div>
                                         </div>
                                     </div>
